# group-signature-lib

./: CMakeLists.txt  CONTRIBUTING.md  Changelog.md  README.md  vcpkg.json
cmake/: CompilerSettings.cmake  FindGMP.cmake  ProjectBoost.cmake  ProjectCryptopp.cmake  ProjectJsonCpp.cmake  ProjectPbc.cmake  ProjectPbcSig.cmake  config.cmake
doc/: interface.md
group_sig/: CMakeLists.txt
group_sig/algorithm/: GroupSig.cpp  GroupSig.h  GroupSigFactory.h  GroupSigInterface.h  KeyLoaderDumper.cpp  KeyLoaderDumper.h  LinearPair.h  RingSig.cpp  RingSig.h
group_sig/algorithm/bbs04/: GroupSig_BBS.cpp  GroupSig_BBS.h  GroupSig_BBS_Impl.cpp  GroupSig_BBS_Impl.h
group_sig/algorithm/ring-sig/: Common.h  LinkableRingSig_Impl.cpp  LinkableRingSig_Impl.h
group_sig/devcore/: Base64.cpp  Base64.h  CommonFunc.h  CommonStruct.h  ConfigParser.h  SHA3.cpp  StatusCode.h  easylog.h  vector_ref.h
patch/: pbc_sig.patch
